--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+appdirs==1.4.0
 beautifulsoup4==4.5.3
 bs4==0.0.1
+packaging==16.8
+pyparsing==2.1.10
 requests==2.13.0
-wheel==0.24.0
+six==1.10.0
+stem==1.5.4
